--- a/Views/Carts/Index.cshtml
+++ b/Views/Carts/Index.cshtml
@@ -19,6 +19,7 @@
                     <th>Quantity</th>
                     <th>Price</th>
                     <th>Subtotal</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
 
@@ -32,6 +33,12 @@
                         <td>
                             @((decimal)(cartItem.Quantity * cartItem.Product.MSRP))
                         </td>
+                        <td>
+                            <form asp-action="RemoveFromCart">
+                                <input type="hidden" name="productId" asp-for="@cartItem.ProductId">
+                                <input type="submit" value="Remove" class="btn btn-danger">
+                            </form>
+                        </td>
                     </tr>
                 }
             </tbody>
@@ -39,9 +46,16 @@
             <tfoot>
                 <tr>
                     <td>Total</td>
-                    <td colspan="3">@(Model.CartItems.Sum(cartItem => (decimal)(cartItem.Quantity * cartItem.Product.MSRP)))</td>
+                    <td colspan="4">@(Model.CartItems.Sum(cartItem => (decimal)(cartItem.Quantity * cartItem.Product.MSRP)))</td>
                 </tr>
             </tfoot>
         </table>
     }
 </div>
+
+@if (Model.CartItems.Count > 0)
+{
+    <a class="btn btn-succes" asp-controller="Orders" asp-action="Checkout">
+        Checkout
+    </a>
+}
